# gemm-int8

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  build.sh  pyproject.toml  requirements-build.txt  setup.py  test.py
.github/scripts/: build-cuda-old.sh  real-build.sh
.github/workflows/: build-and-release.yml  ci.yml  ci.yml.old
gemm_int8/: __init__.py
gemm_int8/kernels/: bindings.cpp  gemm.cu
gemm_int8/kernels/include/: gemm.h
int8_ada/: __init__.py
int8_ada/kernels/: bindings.cpp  gemm.cu
int8_ada/kernels/include/: gemm.h
